src/css/style.page.css
@tailwind components;
@tailwind utilities;

.page h1 {
    font-size: 2.5rem;
    line-height: 3.5rem;
}

.page h2 {
    color: theme(colors.gray.800);
    font-size: 2rem;
    font-weight: 600;
}

.page .ff-bg-dark h2 {
    color: theme(colors.teal.300);
}

.page .ff-bg-mid h2 {
    color: theme(colors.white);
}

.page .ff-bg-mid h5 {
    color: theme(colors.teal.400);
}

.page h4 {
    font-size: 1.5rem;
    font-weight: 600;
    margin-bottom: 12px;
    color: white;
}

.page .hero h4 {
    margin-bottom: 1.5rem;
}

.page p {
    color: theme(colors.white);
    line-height: 1.75rem;
    font-size: 16px;
    font-weight: 300;
    margin-bottom: 1rem;
}

.page .hero p {
    line-height: 32px;
}

.page .hero img {
    width: 250px;
    height: 250px;
}

.page .hero-lg img {
    width: 325px;
    height: 325px;
}

.page .hero-wide img {
    width: 600px;
    height: auto;
}

/* ABOUT */

.highlight-feature {
    text-align: center;
}

.highlight-feature h2 {
    color: theme(colors.teal.600);
}

.highlight-feature img {
    height: 172px;
    width: auto;
    margin: 12px auto;
}

.highlight-feature p {
    color: black;
    padding: 0 24px;
}

.about-team h4 {
    color: theme(colors.gray.800);
}

.about-team a:hover,
.about-team h4:hover,
.about-team path:hover {
    color: theme(colors.blue.600);
    text-decoration: none;
    --tdur: 0;
}

/*
    PRODUCT
*/
@layer components {

    .product-left,
    .product-right {
        padding-bottom: 48px;
        @apply text-center sm:text-left flex items-center flex-col-reverse sm:flex-row;
    }

    .product-left>div {
        @apply sm:pr-12;
    }

    .product-right>div {
        @apply sm:pl-12 sm:text-right;
    }

    .product-left img,
    .product-right img {
        width: 150px;
    }

    .product-right {
        @apply sm:flex-row-reverse;
    }
}

/*
    FEATURES
*/


@layer components {
    .feature-tiles {
        display: grid;
        @apply grid-cols-1 md:grid-cols-2;
        gap: 48px;
    }

    .feature-tile {
        background-color: white;
        border: 1px solid theme(colors.gray.200);
        border-radius: 24px;
        padding: 24px;
    }

    .feature-tile--title {
        display: flex;
        align-items: center;
    }

    .feature-tile img {
        width: 64px;
        height: 64px
    }

    .feature-tile h4 {
        flex-grow: 1;
        text-align: left;
        margin: 0;
        margin-left: 16px;
        padding-right: 32px;
    }

    .feature-tile p {
        text-align: left;
        margin: 0;
        margin-top: 16px;
    }
}

/*
    PRICING
*/
@layer components {
    .pricing-tiles {
        position: relative;
        grid-template-columns: 1fr 1fr 1fr;
        gap: 20px;
        z-index: 2;
        margin-left: auto;
        margin-right: auto;
    }

    .pricing-tile {
        position: relative;
        border-radius: 12px;
        border: 1px solid theme(colors.gray.600);
        background: linear-gradient(0deg, theme(colors.gray.800), theme(colors.gray.700));
        display: flex;
        flex-direction: column;
        @apply max-w-sm;
    }
    
    .pricing-tile-background {
        position: relative;
        width: calc(100% + 2px);
        height: calc(100% + 2px);
        bottom: -1px;
        left: -1px;
        background: linear-gradient(#1f293700, #1f2937);
        border-radius: 10px;
        pointer-events: none;
        @apply px-6;
    }


    .pricing-tiles p.lead-p {
        @apply text-gray-400;
    }

    .pricing-tile h5 {
        font-weight: 500;
        line-height: 1;
        margin-block-end: 0;
    }

    .pricing-tile h4 {
        font-size: 24px;
        font-weight: bold;
        margin: 0;
        margin-bottom: 0;
        color: theme(colors.teal.300);
        @apply text-left;
    }

    .pricing-tile h2 {
        font-size: 35px;
        font-weight: 500;
        margin-bottom: 0;
        color: theme(colors.teal.100);
        @apply mt-0;
    }
    
    .pricing-tile label {
        font-weight: 300;
        display: block;
        color: theme(colors.gray.400);
        font-size: 16px;
        @apply text-right leading-6 md:leading-5;
    }
    
    .pricing-tile p {
        font-size: 0.875rem;
        line-height: 1.5rem;
        font-weight: 200;
    }

    .pricing-tile a.ff-btn .ff-btn--secondary-oulined {
        display: inline-block;
        margin-top: 0.875rem;
        @apply text-center;
    }

    .pricing-tile .lets-talk {
        font-weight: 300;
        font-size: 24px;
    }

    .annual-text {
        font-weight: 300;
        color: theme(colors.gray.400);
        font-size: 0.7rem;
        line-height: 0.7rem;
        border: 1px solid theme(colors.gray.400);
        border-radius: 2px;
        @apply text-left;
    }

    .annual-text a {
        font-weight: 300;
        color: theme(colors.gray.400);
        font-size: 0.7rem;
        line-height: 0.7rem;
    }    

    .annual-text a:hover {
        text-decoration: none;
    }


    .note {
        font-weight: 300;
        margin: 0;
        margin-bottom: 0;
        @apply text-center md:text-left;
    }

    .ff-checklist li {
        font-weight: 100;
        @apply flex gap-2;
    }

    .ff-checklist li::before {
        content: url("/images/icons/check.svg");
        width: 16px;
        height: 16px;
        flex-shrink: 0;
        padding-top: 2px;
    }

    .features .note {
        font-weight: 600;
    }
}

/* PRICING TOGGLE */

/* changes .selector */
.slides .selector {
    left: 39%;
    width: 60%;
}

.slides .cloudText {
    color: white;
}

.ff-bg-light .slides .cloudText {
    color: theme(colors.gray.800);
}

.slides .selfHostedText,
.ff-bg-light .slides .selfHostedText {
    color: theme(colors.teal.300);
}

/* contains switch buttons cloud - self-hosted */
.mainToggle {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 0.2rem;
    margin: auto;
    max-width: fit-content;
    height: 36px;
}

/* toggle btn bg */
.btnToggle {
    position: absolute;
    width: 218px;
    height: 36px;
    margin: 0rem;
    border-radius: 18px;
    border: 1px solid theme(colors.gray.700);
    z-index: 0;
    cursor: pointer;
    padding: 0;
}

/* switch */
.selector {
    position: absolute;
    width: 40%;
    height: 88%;
    top: 2px;
    left: 2px;
    border-radius: 16px;
    transition-duration: 0.5s;
    --tdur: 0;
    background-color: theme(colors.gray.700);
    z-index: -1;
}

/* contains the container for cloud & self-hosted */
.hosting {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    margin: 0rem;
    z-index: 1;
}

/* container for cloud & self-hosted */
.divCloud,
.divSelfHosted {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

/* words cloud and self-hosted */
.cloudText, .selfHostedText {
    font-size: 12px;
    font-weight: 600;
    transition-duration: 0.5s;
}

.cloudText {
    color: theme(colors.teal.300);
}

.selfHostedText {
    color: white;
}

.ff-bg-light .selfHostedText {
    color: theme(colors.gray.800);
}

.hide {
    visibility: hidden;
    position: absolute;
    top: 0px;
    opacity: 0;
    /* transition: visibility 0s 2s, opacity 2s, position 0s 2s, linear; */
}

/* COMPANY VALUE */

@layer components {
    .company-value {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        @apply w-1/2 md:w-1/3;
    }

    .company-value img {
        width: 128px;
    }

    .company-value h5 {
        color: theme(colors.teal.500);
        font-weight: bold;
        font-size: 1.25rem;
        margin-top: 1rem;
        margin-bottom: 3rem;
        @apply px-2 md:px-0
    }

    .about-values .company-value {
        display: flex;
        align-items: center;
        margin-bottom: 2rem;
        @apply w-1/2 md:w-1/3 gap-y-3 justify-start md:justify-center px-6 flex-col md:flex-row;
    }

    .about-values .company-value img {
        width: 60px;
        min-width: 60px;
    }

    .about-values .company-value h5 {
        color: theme(colors.teal.300);
        font-weight: 500;
        margin-top: 0;
        margin-bottom: 0;
        font-size: 1.2rem;
        line-height: 1.3rem;
        @apply px-2 md:px-0 text-center md:text-left md:ml-4;
    }
}

/* INVESTORS */

@layer components {
    .investors {
        display: flex;
        flex-direction:row;
        flex-wrap: wrap;
        align-items: center;
        justify-content: space-between;
        @apply md:px-3;
    }

    .investors .logos {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        margin-bottom: 10px;
        align-items: center;
        @apply gap-3 w-full justify-center gap-6 md:gap-0 md:justify-between;
    }

    .investors img {
        @apply px-3 max-h-[48px] md:max-h-[41px];
    }
}

/* MEET THE TEAM */

.team-headshot {
    --border-width: 8px;
    --border-radius: 16px;
    height: 100%;
    position: relative;
    overflow: hidden;
}

.team-headshot img {
    border-top-left-radius: var(--border-radius);
    border-top-right-radius: var(--border-radius);
    border-width: var(--border-width);
    border-color: black;
}

.team-headshot:nth-child(3n-2) img {
    background: url("/images/team/backing-cloud-1.png"), theme(colors.gray.700);
    background-size: cover;
}

.team-headshot:nth-child(3n-1) img {
    background: url("/images/team/backing-cloud-2.png"), theme(colors.teal.700);
    background-size: cover;
}

.team-headshot:nth-child(3n) img {
    background: url("/images/team/backing-cloud-3.png"), theme(colors.red.500);
    background-size: cover;
}


.member-facts {
    position: absolute;
    top: 100%;
    width: 100%;
    height: 0;
    opacity: 0;
    background-color: #000000f0;
    color: theme(colors.gray.300);
    font-weight: 500;
    padding: 24px;
    list-style: circle;
    padding-left: 36px;
    border-radius: var(--border-radius);
    transition: 0.3s top, 0.3s height, 0.3s opacity;
    -webkit-transition: 0.3s top, 0.3s height, 0.3s opacity;
}

.member-facts li {
    margin-bottom: 12px;
}

.team-headshot:hover .member-facts {
    top: 0;
    height: 100%;
    opacity: 1;
}


.member-info {
    position: relative;
    border-color: black;
    background-color: theme(colors.gray.800);
    text-align: center;
    padding: 12px 24px;
    border-width: var(--border-width);
    border-top-width: 0;
    border-bottom-left-radius: var(--border-radius);
    border-bottom-right-radius: var(--border-radius);
}

.member-info h5 {
    color: white;
}

.team .title {
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.member-info .title .name {
    color: white;
    font-size: 1.5rem;
    line-height: 2rem;
    font-weight: 600;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.member-info .title .role {
    color: theme(colors.gray.400);
    font-weight: 300;
    font-size: 1rem;
    margin-top: 8px;
}

.team .socials {
    display: flex;
    border-top: 2px solid theme(colors.gray.700);
    margin-top: 1rem;
    padding-top: 1rem;
    justify-content: center;
}

.team .socials span {
    display: flex;
    margin-right: 1rem;
}

.team .socials span a {
    color: theme(colors.teal.200);
}

/*
    POSTS & WEBINARS
*/

@layer components {

    .post-title h1,
    .webinar-title h1 {
        color: white;
        @apply mb-2 text-2xl sm:text-page-h1;
    }

    .webinar-title h4,
    .post-title h4 {
        color: theme(colors.gray.400);
        font-weight: 400;
        margin-bottom: 2rem;
        @apply text-lg sm:text-post-h4;
    }

    .webinar-title label,
    .post-title label {
        @apply text-teal-300 text-xs uppercase font-bold;
    }
}

